# audio_pattern_discovery

./: .gitignore  Cargo.toml  README.md  generate_report.sh
project/config/: Discovery.toml  SignalProcessing.toml  Templates.toml
project/templates/: dendogram.tex  dendrogram.tex  document.tex  figure.tex  result_page.html  result_page_decoded.html  table.tex
src/: aligned_model_merging.rs  alignments.rs  audio.rs  clustering.rs  discovery.rs  error.rs  hidden_markov_model.rs  main.rs  neural.rs  numerics.rs  reporting.rs  spectrogram.rs
